# raylib-cpm-cmake-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: compiler_check.cmake  get_cpm.cmake
